Don't assert here, I think it is wrong, the encoding can be binary at this point. In that case, the body doesn't need to be encoded at all.

Add testcase for a bug where the assert is triggered.

Introduced in r1006180.

BUG: 223509

svn path=/trunk/KDE/kdepimlibs/; revision=1077834